--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 <div class="center">
 
-    <img src="img/js.jpg">
-    <img src="img/jl.jpg">
+    <img src="img/js1.jpg">
+    <img src="img/jl1.jpg">
 
 </div>
 
